chore: adds new custom icon

--- a/libs/watt/package/empty-state/+storybook/storybook-empty-state-overview.component.html
+++ b/libs/watt/package/empty-state/+storybook/storybook-empty-state-overview.component.html
@@ -53,6 +53,19 @@ limitations under the License.
   </div>
   <div class="examples">
     <watt-empty-state
+      icon="cooperation"
+      title="No messages yet"
+      message="Create a new message to get started."
+    />
+    <watt-empty-state
+      icon="cooperation"
+      title="No messages yet"
+      message="Create a new message to get started."
+      size="small"
+    />
+  </div>
+  <div class="examples">
+    <watt-empty-state
       title="No results for ‘test’"
       message="Try adjusting your search or filter to find what you are looking for."
     />
