--- a/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
+++ b/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
@@ -44,6 +44,12 @@ limitations under the License.
     </watt-icon>
     <figcaption>custom-not-found</figcaption>
   </figure>
+  <figure>
+    <watt-icon size="xl">
+      <watt-empty-state-cooperation />
+    </watt-icon>
+    <figcaption>custom-cooperation</figcaption>
+  </figure>
 </div>
 
 <div class="groups custom-icons">
