--- a/libs/dh/core/shell/src/lib/dh-core-shell.component.html
+++ b/libs/dh/core/shell/src/lib/dh-core-shell.component.html
@@ -18,7 +18,7 @@ limitations under the License.
   <ng-container watt-shell-sidenav>
     <div class="sidenav-container">
       <div class="sidenav">
-        <img src="/assets/logo-light.svg" alt="DataHub logo" class="logo--sidenav" />
+        <img src="assets/logo-light.svg" alt="DataHub logo" class="logo--sidenav" />
       </div>
 
       <dh-primary-navigation />
