Add vater-grid and vater-grid-area components

--- a/libs/watt/package/core/styles/_vater.scss
+++ b/libs/watt/package/core/styles/_vater.scss
@@ -131,6 +131,8 @@
   }
 
   .vater-offset-xs {
+    padding: var(--watt-space-xs);
+
     &.vater-column {
       padding: var(--watt-space-xs) 0;
     }
@@ -141,6 +143,8 @@
   }
 
   .vater-offset-s {
+    padding: var(--watt-space-s);
+
     &.vater-column {
       padding: var(--watt-space-s) 0;
     }
@@ -151,6 +155,8 @@
   }
 
   .vater-offset-m {
+    padding: var(--watt-space-m);
+
     &.vater-column {
       padding: var(--watt-space-m) 0;
     }
@@ -161,6 +167,8 @@
   }
 
   .vater-offset-ml {
+    padding: var(--watt-space-ml);
+
     &.vater-column {
       padding: var(--watt-space-ml) 0;
     }
@@ -171,6 +179,8 @@
   }
 
   .vater-offset-l {
+    padding: var(--watt-space-l);
+
     &.vater-column {
       padding: var(--watt-space-l) 0;
     }
@@ -181,6 +191,8 @@
   }
 
   .vater-offset-xl {
+    padding: var(--watt-space-xl);
+
     &.vater-column {
       padding: var(--watt-space-xl) 0;
     }
@@ -260,5 +272,21 @@
 
   .vater-justify-space-evenly {
     justify-content: space-evenly;
+  }
+
+  .vater-subgrid-columns {
+    display: grid;
+    grid-template-columns: subgrid;
+  }
+
+  .vater-subgrid-rows {
+    display: grid;
+    grid-template-rows: subgrid;
+  }
+
+  .vater-subgrid-both {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
   }
 }
