--- a/libs/watt/package/stepper/watt-stepper.component.html
+++ b/libs/watt/package/stepper/watt-stepper.component.html
@@ -41,7 +41,7 @@ limitations under the License.
   <ng-template let-index="index" matStepperIcon="error">
     {{ index + 1 }}
   </ng-template>
-  @for (step of _steps; track step) {
+  @for (step of wattSteps(); track step) {
     @if (step.enabled()) {
       <mat-step [editable]="step.editable" [stepControl]="step.stepControl">
         <ng-template matStepLabel>{{ step.label }}</ng-template>
@@ -49,7 +49,7 @@ limitations under the License.
           <ng-container *ngTemplateOutlet="step.templateRef()" />
         </div>
         <div class="watt-stepper-button-wrapper">
-          @if (!(onFirstStep$ | push)) {
+          @if (!onFirstStep()) {
             <watt-button
               [disabled]="step.disablePreviousButton()"
               variant="secondary"
@@ -60,7 +60,7 @@ limitations under the License.
             </watt-button>
           }
 
-          @if (!(onLastStep$ | push)) {
+          @if (!onLastStep()) {
             <watt-button
               variant="secondary"
               (click)="nextStep(step)"
@@ -72,10 +72,10 @@ limitations under the License.
             </watt-button>
           }
 
-          @if (onLastStep$ | push) {
+          @if (onLastStep()) {
             <watt-button
               variant="primary"
-              [loading]="isCompleting"
+              [loading]="isCompleting()"
               (click)="complete()"
               [disabled]="step.disableNextButton()"
               >{{ step.nextButtonLabel() }}
