refac: get rid of ngClass

--- a/libs/watt/package/dropdown/watt-dropdown.component.html
+++ b/libs/watt/package/dropdown/watt-dropdown.component.html
@@ -49,7 +49,7 @@ limitations under the License.
     #matSelect
     [panelWidth]="panelWidth()"
     [multiple]="multiple()"
-    [ngClass]="{ chip: chipMode(), 'mat-mdc-select-multiple': multiple() }"
+    [class]="{ chip: chipMode(), 'mat-mdc-select-multiple': multiple() }"
     [panelClass]="{
       'watt-dropdown-panel': true,
       'watt-dropdown-panel-chip-mode': chipMode(),
