--- a/libs/dh/market-participant/feature-market-roles/src/components/market-roles.component.html
+++ b/libs/dh/market-participant/feature-market-roles/src/components/market-roles.component.html
@@ -17,14 +17,9 @@ limitations under the License.
 <watt-card vater inset="ml" *transloco="let t; prefix: 'marketParticipant.marketRolesOverview'">
   <vater-flex fill="vertical" gap="m">
     <vater-stack direction="row" gap="s">
-      <h3>{{ t("marketRoles") }}</h3>
-      <span class="watt-chip-label">{{ dataSource.data.length }}</span>
-
       <vater-spacer />
 
-      <watt-button icon="download" variant="text" (click)="download()">{{
-        "shared.download" | transloco
-      }}</watt-button>
+      <dh-download-button (click)="download()" />
     </vater-stack>
 
     <vater-flex fill="vertical" scrollable>
