--- a/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
@@ -20,21 +20,8 @@ limitations under the License.
   *transloco="let t; prefix: 'wholesale.calculations'"
   [searchLabel]="t('search')"
   [error]="dataSource.error"
+  [enableCount]="false"
 >
-  <h3>{{ t("headline") }}</h3>
-
-  <watt-button variant="secondary" data-testid="newCalculation.add" [routerLink]="['new']">
-    {{ t("new") }}
-  </watt-button>
-
-  <watt-button
-    *dhPermissionRequired="['dh2-bridge:import']"
-    variant="secondary"
-    [wattMenuTriggerFor]="menu"
-  >
-    <watt-icon name="moreVertical" />
-  </watt-button>
-
   <watt-menu #menu>
     <watt-menu-item (click)="uploader.selectFile()">
       <span>{{ t("capacitySettlements.uploadButton") }}</span>
@@ -49,6 +36,22 @@ limitations under the License.
   <watt-data-filters>
     <dh-calculations-filters [filter]="filter" (filterChange)="fetch($event)" />
   </watt-data-filters>
+
+  <watt-data-actions>
+    <vater-stack direction="row" gap="m">
+      <watt-button variant="secondary" data-testid="newCalculation.add" [routerLink]="['new']">
+        {{ t("new") }}
+      </watt-button>
+      <watt-button
+        *dhPermissionRequired="['dh2-bridge:import']"
+        variant="secondary"
+        [wattMenuTriggerFor]="menu"
+      >
+        {{ t("actionsButton") }}
+        <watt-icon name="moreVertical" />
+      </watt-button>
+    </vater-stack>
+  </watt-data-actions>
 
   <watt-table
     *transloco="let translateHeader; prefix: 'wholesale.calculations.columns'"
