--- a/libs/dh/imbalance-prices/src/components/details/details.component.html
+++ b/libs/dh/imbalance-prices/src/components/details/details.component.html
@@ -36,9 +36,7 @@ limitations under the License.
     </watt-drawer-heading>
 
     <watt-drawer-actions>
-      <watt-button icon="download" variant="secondary" (click)="downloadCSV()">
-        {{ "shared.download" | transloco }}
-      </watt-button>
+      <dh-download-button (click)="downloadCSV()" />
     </watt-drawer-actions>
 
     @if (drawer.isOpen()) {
