feat(metering-point, end-of-supply): add date validation and disabled dates query for end of supply

--- a/libs/watt/package/picker/datepicker/watt-datepicker.component.html
+++ b/libs/watt/package/picker/datepicker/watt-datepicker.component.html
@@ -82,9 +82,10 @@ limitations under the License.
       autocomplete="off"
       spellcheck="false"
       [disabled]="disabled()"
-      [min]="min()"
-      [max]="max()"
+      [min]="min() ?? null"
+      [max]="max() ?? null"
       [matDatepicker]="singleDatepicker"
+      [matDatepickerFilter]="dateFilter()"
       (focusin)="onFocusIn()"
       (focusout)="onFocusOut($event)"
     />
