users manage should be able to reset mitid

--- a/libs/dh/admin/feature-user-management/src/lib/details/details.component.html
+++ b/libs/dh/admin/feature-user-management/src/lib/details/details.component.html
@@ -70,7 +70,7 @@ limitations under the License.
       <watt-button variant="icon" icon="moreVertical" [wattMenuTriggerFor]="menu">
         <watt-menu #menu>
           <watt-menu-item (click)="resetUser2Fa()">{{ t("reset2fa") }}</watt-menu-item>
-          <watt-menu-item *dhPermissionRequired="['fas']" (click)="resetMitID()">
+          <watt-menu-item *dhPermissionRequired="['users:manage']" (click)="resetMitID()">
             {{ t("resetMitID") }}
           </watt-menu-item>
         </watt-menu>
