--- a/libs/watt/package/core/styles/_vater.scss
+++ b/libs/watt/package/core/styles/_vater.scss
@@ -61,8 +61,10 @@
     height: 100%;
   }
 
-  vater-grid-area,
-  [vater-grid-area] {
+  vater-grid > *,
+  [vater-grid] > *,
+  vater-grid > .vater-fragment > *,
+  [vater-grid] > .vater-fragment > * {
     &.vater-fill-horizontal {
       grid-column: 1 / -1;
     }
@@ -284,9 +286,7 @@
 
     & > *,
     & > .vater-fragment > * {
-      box-shadow:
-        0px 1px 0px 0px var(--watt-color-neutral-grey-300),
-        1px 0px 0px 0px var(--watt-color-neutral-grey-300);
+      box-shadow: 1px 1px 0px 0px var(--watt-color-neutral-grey-300);
     }
 
     &.vater-column {
